examples/k8s/svc1/svc1_svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    $(yaml_dump_map labels 2 0)
  name: ${app_name}
  namespace: ${app_namespace}
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: ${http_port}
    protocol: TCP
    targetPort: http
  - name: https
    port: ${https_port}
    protocol: TCP
    targetPort: https
  selector:
    $(yaml_dump_map labels 2 0)
  sessionAffinity: None
  type: ClusterIP
