examples/k8s/svc1/svc1_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    $(yaml_dump_map labels 2 0)
  name: ${app_name}
  namespace: ${app_namespace}
spec:
  ingressClassName: ${app_ingress_class}
  rules:
  - host: svc1.test.com
    http:
      paths:
      - backend:
          service:
            name: ${app_name}
            port:
              number: ${http_port}
        path: /
        pathType: Prefix
